# asteroid-camera

./: CMakeLists.txt  README.md  asteroid-camera.desktop.template  asteroid-camera.in  asteroid-camera.pro  main.qml
i18n/: asteroid-camera.desktop.h
src/: CMakeLists.txt  main.qml
